[gd_scene load_steps=12 format=2]

[ext_resource path="res://Src/Player/Skin.tscn" type="PackedScene" id=1]
[ext_resource path="res://Src/Player/Player.gd" type="Script" id=2]
[ext_resource path="res://Src/Main/StateMachine/StateMachine.gd" type="Script" id=3]
[ext_resource path="res://Src/Player/States/Move.gd" type="Script" id=4]
[ext_resource path="res://Src/Player/States/Idle.gd" type="Script" id=5]
[ext_resource path="res://Src/Player/States/Run.gd" type="Script" id=6]
[ext_resource path="res://Src/Player/States/Air.gd" type="Script" id=7]
[ext_resource path="res://Src/Player/Magnet/Magnet.tscn" type="PackedScene" id=8]
[ext_resource path="res://Assets/Sounds/Robot_Death.wav" type="AudioStream" id=9]
[ext_resource path="res://Src/Player/States/Death.gd" type="Script" id=10]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 8.8335, 11.9257 )

[node name="Player" type="KinematicBody2D"]
position = Vector2( 88.3324, 40.6794 )
collision_mask = 30
script = ExtResource( 2 )
__meta__ = {
"_edit_group_": true
}

[node name="Magnet" parent="." instance=ExtResource( 8 )]
position = Vector2( 0, -14 )
rotation = -3.14159

[node name="Skin" parent="Magnet" index="0"]
position = Vector2( 17, 0 )

[node name="Sprite" parent="Magnet/Skin" index="0"]
frame = 31

[node name="Sounds" type="Node2D" parent="."]

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="Sounds"]

[node name="death" type="AudioStreamPlayer" parent="Sounds"]
pause_mode = 1
stream = ExtResource( 9 )

[node name="Skin" parent="." instance=ExtResource( 1 )]

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, -12 )
shape = SubResource( 1 )

[node name="StateMachine" type="Node" parent="."]
script = ExtResource( 3 )
initial_state = NodePath("Move")

[node name="Move" type="Node" parent="StateMachine"]
script = ExtResource( 4 )
deccelaration_default = Vector2( 0, 0 )

[node name="Idle" type="Node" parent="StateMachine/Move"]
script = ExtResource( 5 )

[node name="Run" type="Node" parent="StateMachine/Move"]
script = ExtResource( 6 )

[node name="Air" type="Node" parent="StateMachine/Move"]
script = ExtResource( 7 )

[node name="magnet_duration" type="Timer" parent="StateMachine/Move"]
wait_time = 0.5
one_shot = true

[node name="Death" type="Node" parent="StateMachine"]
script = ExtResource( 10 )

[node name="Timer" type="Timer" parent="."]
one_shot = true
[connection signal="timeout" from="StateMachine/Move/magnet_duration" to="StateMachine/Move" method="_on_Timer_timeout"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]

[editable path="Magnet"]

[editable path="Skin"]
